# mtb

./: pyproject.toml
examples/: demo.py
mtb/: action.py  base.py  cli.py  diagram.py  gui.py  guiutil.py  model.py  proxy.py  system.py
tests/: guiutil_test.py  proxy_test.py  system_test.py
